# projeto_pessoal.CHAT_BACK-END

./: .gitignore  Dockerfile  README.md  pyproject.toml  req.txt
crud_fastapi/: __init__.py  app.py
crud_fastapi/utilities/: ConnectionManager.py  DataBaseManager.py  db_models.py  templatesRender.py
crud_fastapi/utilities/GraphQL/: __init__.py  mutations.py  queries.py  schema.py
